--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,38 +1,39 @@
 # Look good
-set-option -g default-terminal "screen-256color"
 
 # C-b C-b will swap to last used window
 bind-key C-b last-window
 
 # Disable anoying repeat
-#set-option repeat-time 0
 set-window-option -g repeat-time 0
 
 # Allows for faster key repetition
 set -s escape-time 0
 
-# Change cursor in vim to distinguish between insert and command mode
-# Use in conjunciton with tmux-cursors.vim
-set-option -g terminal-overrides '*88col*:colors=88,*256col*:colors=256,xterm*:XT:Ms=\E]52;%p1%s;%p2%s\007:Cc=\E]12;%p1%s\007:Cr=\E]112\007:Cs=\E]50;CursorShape=%?%p1%{3}%<%t%{0}%e%p1%{2}%-%;%d\007'
-
-# utf8 support
-#set-window-option -g 'utf8' on
-
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
-
-# Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # basic settings
 set-window-option -g xterm-keys on # for vim
 set-window-option -g mode-keys vi # vi key
 set -sg escape-time 0
 
-set -g status-right '#{battery_status_bg} Batt: #{battery_percentage} | %a %h-%d %H:%M '
+# switch panes using Alt-<vim keys> without prefix
+bind -n M-h select-pane -L
+bind -n M-l select-pane -R
+bind -n M-k select-pane -U
+bind -n M-j select-pane -D
+
+# switch windows using Alt-{p,n} without prefix
+bind -n M-n next-window
+bind -n M-p previous-window
+
+# reload config file (change file location to your the tmux.conf you want to use)
+bind r source-file ~/.tmux.conf
+
+# don't rename windows automatically
+# rename with b-,
+set-option -g allow-rename off
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 run '~/.tmux/plugins/tpm/tpm'
-
