Actualizando cosas de colores y eso

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,14 @@
 # Look good
 
+# True color settings, see https://jdhao.github.io/2018/10/19/tmux_nvim_true_color/ for the details.
+# set -g default-terminal "screen-256color"
+set -g default-terminal "screen-256color"
+
+%if #{==:#{COLORTERM},truecolor}
+  set -g default-terminal "xterm-256color"
+  set -ga terminal-overrides ",xterm-256color*:Tc"
+%endif
+
 # C-b C-b will swap to last used window
 bind-key C-b last-window
 
@@ -27,12 +36,10 @@ bind -n M-j select-pane -D
 bind -n M-n next-window
 bind -n M-p previous-window
 
-# reload config file (change file location to your the tmux.conf you want to use)
-bind r source-file ~/.tmux.conf
-
 # don't rename windows automatically
 # rename with b-,
 set-option -g allow-rename off
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+run '~/.tmux/plugins/tpm/tpm'
