Actualizar títulos desde tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -16,7 +16,7 @@ bind-key C-b last-window
 set-window-option -g repeat-time 0
 
 # Allows for faster key repetition
-set -s escape-time 0
+set -sg escape-time 0
 
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
@@ -24,7 +24,6 @@ setw -g mode-keys vi
 # basic settings
 set-window-option -g xterm-keys on # for vim
 set-window-option -g mode-keys vi # vi key
-set -sg escape-time 0
 
 # switch panes using Alt-<vim keys> without prefix
 bind -n M-h select-pane -L
@@ -36,9 +35,10 @@ bind -n M-j select-pane -D
 bind -n M-n next-window
 bind -n M-p previous-window
 
-# don't rename windows automatically
-# rename with b-,
-set-option -g allow-rename off
+# DO rename windows and show titles and stuff
+set-option -g allow-rename on
+set-option -g set-titles on
+set-option -g set-titles-string "tmux:#S #T"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
