Agregar cosas y nosequé

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -6,6 +6,7 @@ set -g default-terminal "screen-256color"
 
 %if #{==:#{COLORTERM},truecolor}
   set -g default-terminal "xterm-256color"
+  # set -g default-terminal "xterm-truecolor"
   set -ga terminal-overrides ",xterm-256color*:Tc"
 %endif
 
