Agrega soporte para mouse a tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -10,6 +10,9 @@ set -g default-terminal "screen-256color"
   set -ga terminal-overrides ",xterm-256color*:Tc"
 %endif
 
+# Mouse support for sane scrolling
+set-option -g mouse on
+
 # C-b C-b will swap to last used window
 bind-key C-b last-window
 
