--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,7 +11,9 @@ set -g default-terminal "screen-256color"
 %endif
 
 # Mouse support for sane scrolling
-set-option -g mouse on
+# set-option -g mouse on
+
+# bind Escape copy-mode
 
 # C-b C-b will swap to last used window
 bind-key C-b last-window
